syntax = "proto3";

package ai.floedb.metacat.query;

option java_multiple_files = true;
option java_package = "ai.floedb.metacat.query.rpc";
option java_outer_classname = "PlanningExProto";

import "query/lifecycle.proto";

import "google/protobuf/timestamp.proto";

// Additional planning entry point to carry projections/predicates and return typed schema.
service PlanningEx {
  rpc BeginPlanEx(BeginPlanExRequest) returns (BeginPlanExResponse);
}

message Predicate {
  // Simple column -> expression string. Replace with structured expression when available.
  string column = 1;
  string expression = 2;
}

message SchemaColumn {
  string name = 1;
  string logical_type = 2;
  int32 field_id = 3;
  bool nullable = 4;
  string physical_path = 5;
  bool partition_key = 6;
}

message SchemaDescriptor {
  repeated SchemaColumn columns = 1;
}

message BeginPlanExRequest {
  repeated ai.floedb.metacat.query.QueryInput inputs = 1;
  google.protobuf.Timestamp as_of_default = 2;
  int32 ttl_seconds = 3;

  repeated string required_columns = 10;
  repeated Predicate predicates = 11;
  bool include_schema = 12;
}

message BeginPlanExResponse {
  ai.floedb.metacat.query.QueryDescriptor plan = 1;
  SchemaDescriptor schema = 2;
}
